update whisper mode and bill message logic

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -166,7 +166,7 @@ Nachricht erstellen:
 
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Klicke oben links auf icon:add[set=material] *Neue Nachricht*.
-. Gib im Feld *Empfänger* einen Wert ein und wähle dann den passenden Wert aus der Vorschlagsliste. +
+. Gib im Feld *Empfänger hinzufügen...* einen Wert ein und wähle dann den passenden Wert aus der Vorschlagsliste. +
 *_Beispiel:_* Wenn du eine Zahl eingibst, werden dir mögliche Empfänger:innen mit dieser Auftrags-ID oder Kontakt-ID vorgeschlagen (siehe <<#image-messenger-new-message-suggestion-list>>).
 . Gib den Betreff deiner Nachricht im Feld *Betreff* ein.
 . Gib im Textfeld die Nachricht ein.
@@ -176,12 +176,8 @@ Nachricht erstellen:
 . Klicke auf icon:forward_to_inbox[set=material] *SENDEN*.
 
 [[image-messenger-new-message-suggestion-list]]
-.Beispiel: Vorschlagsliste nach Eingabe von "102" im Empfänger:innen-Feld
+.Beispiel: Vorschlagsliste nach Eingabe von "101" im Empfänger:innen-Feld
 image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
-
-////
-<<#image-messenger-new-message-suggestion-list>> zeigt --> Erläuterung ergänzen. Am besten neues Beispiel wählen, da hier Joseph Waits sowohl Kontakt-ID 102 als auch Auftrags-ID 102 hat....
-////
 
 [[table-create-new-message]]
 .Neue Nachricht im Messenger erstellen
@@ -203,18 +199,18 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 Die folgenden Dateitypen sind als Anhang in der Nachricht zulässig: bmp, csv, gif, jpeg, json, pdf, png, tiff, txt, xlsx, zip.
 
 |[#intable-whisper-mode]*Flüster-Modus* (icon:visibility[set=material] / icon:visibility_off[set=material, role=skyBlue])
-|Du kannst Nachrichten flüstern, damit diese nur intern und _nicht_ für deine Kontakte sichtbar sind. Klicke dazu auf icon:visibility[set=material]. Du erkennst eine geflüsterte Nachricht in dieser Ansicht daran, dass die Schaltfläche icon:visibility_off[set=material, role=skyBlue] angezeigt wird. Außerdem ändert sich die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* in icon:visibility_off[set material] *FLÜSTERN*. +
+|Du kannst Nachrichten flüstern, damit diese nur intern und _nicht_ für deine Kontakte sichtbar sind. Klicke dazu auf *Flüster-Modus* (icon:visibility[set=material]). Du erkennst eine geflüsterte Nachricht in dieser Ansicht daran, dass die Schaltfläche icon:visibility_off[set=material, role=skyBlue] angezeigt wird. Außerdem ändert sich die Schaltfläche von icon:forward_to_inbox[set=material] *SENDEN* in icon:visibility_off[set material] *FLÜSTERN*. +
 In der Übersicht werden geflüsterte Nachrichten in _kursiver Schrift_ dargestellt. +
-*_Hinweis:_* Sobald der Flüstermodus für diese Nachricht aktiviert ist, kann die Schaltfläche *Abrechnen* _nicht_ mehr aktiviert werden.
+*_Hinweis:_* Sobald der Flüstermodus für diese Nachricht aktiviert ist, kannst du die <<#intable-bill-message, Nachricht abrechnen>>.
 
 |[#intable-assign-tags-message]*Der Nachricht Tags zuweisen* (icon:local_offer[set=material])
 |Mit einem Klick auf icon:local_offer[set=material] kannst du nach Tags suchen und bereits bestehende Tags für die Nachricht wählen (icon:check_box[set=material, role=skyBlue]), neue Tags hinzufügen (icon:add[set=material]) und bestehende Tags bearbeiten (icon:edit[set=material]). +
 *_Hinweis:_* Sobald du einen Tag für die Nachricht gewählt hast, wird die Schaltfläche in blau angezeigt: icon:local_offer[set=material, role=skyBlue]. So erkennst du auf einen Blick, ob der Nachricht Tags zugewiesen sind. +
-*_Wichtig:_* Damit du die Nachricht abrechnen kannst, musst du mindestens ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellen.
+*_Wichtig:_* Damit du die Nachricht <<#intable-bill-message, abrechnen>> kannst, musst du mindestens ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellen.
 
 |[#intable-bill-message]*Nachricht abrechnen* (icon:more_vert[set=material])
-|Du kannst eine Nachricht immer dann abrechnen, wenn es sich _nicht_ um eine geflüsterte Nachricht handelt. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Abrechnen* aktivierst (icon:toggle_on[set=material, role=skyBlue]), wird diese Nachricht abgerechnet. Die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* wird geändert in icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. +
-*_Hinweis:_* Sobald die Schaltfläche *Abrechnen* aktiviert ist, kann für diese Nachricht _nicht_ der Flüstermodus aktiviert werden.
+|Du kannst eine Nachricht immer dann abrechnen, wenn es sich um eine <<#intable-whisper-mode, geflüsterte Nachricht>> handelt. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Nachricht abrechnen* aktivierst (icon:toggle_on[set=material, role=skyBlue]), wird diese Nachricht abgerechnet. Die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* wird geändert in icon:visibility_off[set=material] *ABRECHNEN UND SENDEN*. +
+*_Hinweis:_* Du kannst die Schaltfläche *Nachricht abrechnen* nur aktivieren, wenn der <<#intable-whisper-mode, Flüstermodus>> für diese Nachricht aktiviert werden.
 
 |[#intable-timer]*Timer* (icon:more_vert[set=material])
 |Du kannst für jede Nachricht einen Timer starten. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Timer* aktivierst (icon:toggle_on[set=material, role=skyBlue]), startet automatisch der Timer neben der Schaltfläche icon:forward_to_inbox[set=material] *SENDEN*. +
@@ -373,7 +369,7 @@ In der Übersicht des Messenger kannst du dir die folgenden Spalten anzeigen las
 // ** Mögliche Werte: 
 
 |[#intable-overview-relations]*Relationen*
-|Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
+|Hier werden die Relationen zur Konversation angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
 
 |[#intable-overview-subject]*Betreff*
 |Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
@@ -786,7 +782,7 @@ Im Ordner *Neue Nachrichten* des Messengers kannst du dir die folgenden Spalten 
 // ** Mögliche Werte: 
 
 |[#intable-new-messages-relations]*Relationen*
-|Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
+|Hier werden die Relationen zur Konversation angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
 
 |[#intable-new-messages-subject]*Betreff*
 |Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
@@ -860,7 +856,7 @@ Im Ordner *Meine Nachrichten* des Messengers kannst du dir die folgenden Spalten
 // ** Mögliche Werte: 
 
 |[#intable-my-messages-relations]*Relationen*
-|Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
+|Hier werden die Relationen zur Konversation angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
 
 |[#intable-my-messages-subject]*Betreff*
 |Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
@@ -938,7 +934,7 @@ In Papierkorb des Messengers kannst du dir die folgenden Spalten anzeigen lassen
 // ** Mögliche Werte: 
 
 |[#intable-trash-relations]*Relationen*
-|Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
+|Hier werden die Relationen zur Konversation angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
 
 |[#intable-trash-subject]*Betreff*
 |Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
