--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -206,7 +206,7 @@ In der Übersicht werden geflüsterte Nachrichten in _kursiver Schrift_ dargeste
 |[#intable-assign-tags-message]*Der Nachricht Tags zuweisen* (icon:local_offer[set=material])
 |Mit einem Klick auf icon:local_offer[set=material] kannst du nach Tags suchen und bereits bestehende Tags für die Nachricht wählen (icon:check_box[set=material, role=skyBlue]), neue Tags hinzufügen (icon:add[set=material]) und bestehende Tags bearbeiten (icon:edit[set=material]). +
 *_Hinweis:_* Sobald du einen Tag für die Nachricht gewählt hast, wird die Schaltfläche in blau angezeigt: icon:local_offer[set=material, role=skyBlue]. So erkennst du auf einen Blick, ob der Nachricht Tags zugewiesen sind. +
-*_Wichtig:_* Damit du die Nachricht <<#intable-bill-message, abrechnen>> kannst, musst du mindestens ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellen.
+*_Wichtig:_* Damit du die Nachricht <<#intable-bill-message, abrechnen>> kannst, musst du mindestens ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellen und dieses Tag der Nachricht zuweisen.
 
 |[#intable-bill-message]*Nachricht abrechnen* (icon:more_vert[set=material])
 |Du kannst eine Nachricht immer dann abrechnen, wenn es sich um eine <<#intable-whisper-mode, geflüsterte Nachricht>> handelt. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Nachricht abrechnen* aktivierst (icon:toggle_on[set=material, role=skyBlue]), wird diese Nachricht abgerechnet. Die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* wird geändert in icon:visibility_off[set=material] *ABRECHNEN UND SENDEN*. +
@@ -224,7 +224,7 @@ Klicke auf icon:pause_circle[set=material], um den Timer anzuhalten bzw. auf ico
 
 |[#intable-send]*SENDEN*
 |Mit einem Klick auf icon:forward_to_inbox[set=material] *SENDEN* wird die Nachricht gesendet. +
-*_Hinweis:_* Wenn du die Nachricht abrechnest, ändert sich der Name der Schaltfläche in icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. Wenn du die Nachricht flüsterst, ändert sich der Name der Schaltfläche in icon:visibility_off[set=material] *FLÜSTERN*.
+*_Hinweis:_* Wenn du die Nachricht abrechnest, ändert sich der Name der Schaltfläche in icon:visibility_off[set=material] *ABRECHNEN UND SENDEN*. Wenn du die Nachricht flüsterst, ändert sich der Name der Schaltfläche in icon:visibility_off[set=material] *FLÜSTERN*.
 
 |====
 
@@ -613,8 +613,8 @@ Nachricht abrechnen:
 . Klicke auf icon:local_offer[set=material], um der Nachricht Tags zuzuweisen. +
 *_Wichtig:_* Um Nachrichten abrechnen zu können, musst du im Menü *Einrichtung » Einstellungen » Tags* ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellt haben.
 . Klicke auf icon:more_vert[set=material].
-. Aktiviere die Schaltfläche *Abrechnen* (icon:toggle_on[set=material, role=skyBlue]).
-. Klicke auf icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. +
+. Aktiviere die Schaltfläche *Nachricht abrechnen* (icon:toggle_on[set=material, role=skyBlue]).
+. Klicke auf icon:visibility_off[set=material] *ABRECHNEN UND SENDEN*. +
 → Das Fenster *Abrechnen und senden* öffnet sich.
 . Du siehst hier im Feld *Timer* die Zeit, die der Timer bisher aufgezeichnet hat. 
 . Im Feld *Minuten* kannst du den Wert ggf. anpassen.
@@ -632,7 +632,7 @@ Das <<#kontextmenue, Kontextmenü für die Konversationen>> hast du weiter oben 
 
 ////
 TODO: Screenshot von einer einzelnen Nachricht mit den Mini-Icons hier einfügen und erklären.
---> Absender / Datum / Uhrzeit / Anhang-Symbol (Anzahl sichtbar beim drüber hovern) / Abgerechnet-Symbol (Anzahl der abgerechneten Minuten sichtbar beim drüber hovern / Tag-Namen (getrennt durch |-Zeichen)
+--> Absender / Datum / Uhrzeit ohne Sekunden / Tag-Namen (getrennt durch |-Zeichen) / Anhang-Symbol (Anzahl sichtbar beim drüber hovern) / Uhr-Symbol, Kreditkarten-Symbol und Anzahl der Minuten im Fall einer abgerechneten Nachricht.
 ////
 
 [[image-messenger-edit-single-message]]
